# capircvd

./: CHANGES  Makefile.in  README  capiapp.cpp  capiapp.h  capircvd.conf  capircvd.cpp  capircvd.handler.in  ccconf.cpp  ccconf.h  cconn.cpp  cconn.h  configure  configure.in  install.sh.in  isdn2wav.cpp  tools.cpp  tools.h
contrib/misc/: README  al2alaw.c  capi.faxrcvd_pl.txt  capircvd.handler_MP3  capircvd.handler_eiboeck.txt
contrib/sff2misc/: README  sff-1.0.diff  sff-1.0.patched-tgz
daten/: Namen_49170.alaw  Namen_49172.alaw  Namen_491722774097.alaw  Namen_491722793358.alaw  Namen_491735282280.alaw  Namen_4925.alaw  Namen_49541.alaw  Namen_495451.alaw  Namen_495454.alaw  Namen_495459.alaw  Namen_4954591628.alaw  Namen_495459801046.alaw  Namen_49548114.alaw  Namen_4959.alaw  Namen_495921.alaw  Namen_495921330302.alaw  Namen_495921721774.alaw  Namen_495921875.alaw  Namen_495944.alaw  Namen_495944353.alaw  Namen_496221.alaw  Namen_49622159.alaw  ping_ansage.alaw  ping_noreply.alaw  ping_reply.alaw
